# OCR-LLM

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  ocr_donut.py  pyproject.toml
.github/workflows/: ci-cd.yml  release.yml
docs/: api.md  architecture.md  installation.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: ocr-dashboard.json
nginx/: nginx.conf
output/: resultado.txt
redis/: redis.conf
src/: README.md
src/adapters/: llm_adapter.py
src/application/: __init__.py  batch_service.py  document_service.py  quality_service.py
src/config/: README.md  container.py  settings.py
src/domain/: README.md  cache_port.py  exceptions.py  models.py  monitoring_port.py  ports.py  tesseract_adapter.py  use_cases.py  value_objects.py
src/infrastructure/: README.md  donut_adapter.py  donut_adapter_v2.py  file_storage.py  logging_config.py  monitoring.py  openai_llm_adapter.py  redis_cache.py  retry_service.py
src/interfaces/: README.md  cli.py
src/interfaces/api/: app.py  main.py  models.py  router.py
tests/: conftest.py  test_api.py  test_document_service.py  test_integration.py
