[project]
name = "ocr-llm-cli"
requires-python = ">=3.10"
dependencies = [
    "pymupdf==1.24.2",
    "pydantic>=2",
    "pydantic-settings",
    "python-dotenv",
    "rich",
    "click>=8.0",
    "dependency-injector>=4.41",
    "transformers>=4.38.2",
    "pdf2image",
    "pillow",
    "torch",
    # Monitoring and logging
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",
    # API dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
    "black",
    "isort",
    "mypy",
    "faker",
    "ruff",
    "build",
    "wheel",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B", "W", "I", "N", "UP", "ANN", "S", "BLE"]
ignore = ["ANN101"]
target-version = "py310"
line-length = 88

[project.scripts]
ocr-llm = "src.interfaces.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.coverage.run]
source = ["src"]